# ctxpkg

./: BUILD_PLAN.md  Cargo.toml  PRD.md
src/: cli.rs  clipboard.rs  config.rs  error.rs  main.rs  packer.rs
src/detect/: generic.rs  golang.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/scanner/: git.rs  lang.rs  mod.rs
