[package]
name = "ctxpkg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
ignore = "0.4"
walkdir = "2"
globset = "0.4"
git2 = "0.18"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
